docs: Add initial paper chapters including introduction, literature review, and methodology.

--- a/paper/Handling_Class_Imbalance_in_Binary_and_Multiclass_Intrusion_Detection_on_the_UNSW_NB15_Dataset_Using_Classical_Machine_Learning/0.1.abstract.tex
+++ b/paper/Handling_Class_Imbalance_in_Binary_and_Multiclass_Intrusion_Detection_on_the_UNSW_NB15_Dataset_Using_Classical_Machine_Learning/0.1.abstract.tex
@@ -5,7 +5,7 @@
 	\line(1,0){430}
 \end{center}
 
-Network intrusion detection systems are critical for identifying malicious traffic, yet their effectiveness is often compromised by severe class imbalance in training datasets. The UNSW-NB15 dataset, a modern benchmark for intrusion detection, exhibits extreme imbalance where rare attack categories such as Worms, Shellcode, and Backdoor constitute less than 3\% of samples. This study systematically evaluates the impact of class imbalance on intrusion detection by comparing three classical machine learning models (Logistic Regression, Random Forest, XGBoost) combined with three imbalance handling strategies: baseline training (S0), class weighting (S1), and random oversampling (S2A). A total of 18 experiments were conducted following a strict reproducibility protocol. Results demonstrate that without imbalance handling, Logistic Regression achieves 0\% recall on all rare attack classes despite 69\% overall accuracy. Class weighting provides the optimal cost-benefit trade-off, with XGBoost achieving 90.8\% accuracy and 0.906 Macro-F1 for binary classification, and 0.792 G-Mean with 95.8\% Shellcode recall for multiclass classification. These findings establish that imbalance handling is essential—not optional—for rare attack detection, and that accuracy is a misleading metric for skewed datasets. G-Mean and per-class recall provide more actionable insights for security-critical applications.
+Network Intrusion Detection Systems (NIDS) are essential for identifying malicious traffic, yet their performance on benchmark datasets such as UNSW-NB15 is often undermined by severe class imbalance. This imbalance causes machine learning models to exhibit high overall accuracy while failing to detect rare but critical attack types, including Worms, Shellcode, and Backdoors. In this study, we systematically investigate how class imbalance affects the detection capabilities of three classical machine learning models---Logistic Regression, Random Forest, and XGBoost---across both binary (Normal vs.\ Attack) and multiclass (ten-class) classification tasks. We evaluate three imbalance-handling strategies: no balancing (baseline), class weighting, and random oversampling. Our experiments, conducted on 18 configurations, reveal that while the baseline models achieve up to 76.9\% accuracy on multiclass classification, they completely fail to detect all four rare attack categories (0\% recall). In contrast, class weighting dramatically improves minority class detection, enabling XGBoost to achieve 82\% recall on Worms and 96\% recall on Shellcode, with an overall G-Mean of 0.792. For binary classification, XGBoost with class weighting achieves 90.8\% accuracy and 0.906 Macro-F1. These findings demonstrate that imbalance-handling strategies are essential for reliable intrusion detection and that aggregate accuracy metrics can be misleading when evaluating security-critical systems. We provide a reproducible baseline pipeline to support future research in this domain.
 
 \clearpage
 \setlength{\headheight}{12pt}
