--- a/notebooks/UNSW_NB15_Colab_Runner.ipynb
+++ b/notebooks/UNSW_NB15_Colab_Runner.ipynb
@@ -1,113 +1,135 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# UNSW-NB15 Experiment Runner\n",
-    "\n",
-    "This notebook allows you to run the UNSW-NB15 Imbalance Study experiments in Google Colab."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# UNSW-NB15 IDS Baseline: Colab Execution Runner\n",
+        "\n",
+        "This notebook provides a reproducible environment for running the full 18-experiment grid used in the study.\n",
+        "\n",
+        "**Hardware Requirement:** GPU Runtime (T4 or better) recommended for XGBoost acceleration."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 1. Setup Environment"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Mount Google Drive to save results persistently\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Define persistent workspace path\n",
+        "import os\n",
+        "WORKSPACE_PATH = '/content/drive/MyDrive/UNSW_NB15_Experiments'\n",
+        "os.makedirs(WORKSPACE_PATH, exist_ok=True)\n",
+        "os.chdir(WORKSPACE_PATH)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Clone Repository (if not already present)\n",
+        "REPO_URL = 'https://github.com/ihmorol/unsw-nb15-handling-binary-multiclass-ids.git'\n",
+        "if not os.path.exists('unsw-nb15-handling-binary-multiclass-ids'):\n",
+        "    !git clone $REPO_URL\n",
+        "else:\n",
+        "    print(\"Repo already cloned. Pulling latest changes...\")\n",
+        "    !cd unsw-nb15-handling-binary-multiclass-ids && git pull\n",
+        "\n",
+        "%cd unsw-nb15-handling-binary-multiclass-ids"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Install Dependencies\n",
+        "!pip install -r requirements.txt\n",
+        "!pip install imbalanced-learn --upgrade"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Verify Hardware"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!nvidia-smi"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. Run Experiments\n",
+        "\n",
+        "Executes the full grid: 2 Tasks x 3 Models x 3 Strategies.  \n",
+        "Uses `n_jobs=-1` to utilize all CPU cores for parallel processing."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python main.py"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 4. Download Results\n",
+        "If not using Google Drive, zip and download the results folder."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!zip -r results.zip results/\n",
+        "from google.colab import files\n",
+        "files.download('results.zip')"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Setup Environment\n",
-    "\n",
-    "# If using Google Drive to store the repo/data:\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "import os\n",
-    "# Navigate to the project folder (adjust path as needed)\n",
-    "# os.chdir('/content/drive/MyDrive/ML_PAPER_REVIEW')\n",
-    "\n",
-    "# OR if cloning from GitHub:\n",
-    "# !git clone https://github.com/yourusername/ML_PAPER_REVIEW.git\n",
-    "# os.chdir('ML_PAPER_REVIEW')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Install Dependencies\n",
-    "!pip install -r requirements.txt\n",
-    "!pip install xgboost==2.0.3  # Ensure recent XGBoost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Verify Data\n",
-    "# Ensure dataset files are present\n",
-    "!ls -l dataset/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Run Visualization Demo (Fast)\n",
-    "# Runs a subset of experiments and generates learning curves\n",
-    "!python -m scripts.run_visualization_demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5. View Generated Figures\n",
-    "import glob\n",
-    "from IPython.display import Image, display\n",
-    "\n",
-    "figures = glob.glob('results_viz_demo/figures/*.png')\n",
-    "for fig in figures:\n",
-    "    display(Image(filename=fig))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 6. Run Full Experiment Grid (Slow)\n",
-    "# !python main.py"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
